--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -10,15 +10,15 @@ $code-font-size: 0.85em;
 $margin: 50px;
 
 // brand color.
-$brand-color: #00008b;
+$brand-color: #003c6e;
 
 // other major colors.
 $site-title-color: rgba(#fff, .9);
 $page-title-color: $brand-color;
 $background-color: #fff;
-$border-color: rgba(#000, .1);
+$border-color: rgba(#000, .25);
 
 // typography colors.
 $text-color: #383838;
-$link-color: lighten($brand-color, 20%);
+$link-color: lighten($brand-color, 15%);
 $blockquote-color: #777;
